# aiops-exp

./: .env.example  .gitignore  README.md  pyproject.toml
aiops_bench/: actions.py  cli.py  observability.py  runner.py  scenario.py
aiops_bench/agents/: __init__.py  deepseek.py  manual.py  mock.py
aiops_bench/environment/: __init__.py  k8s.py
aiops_bench/evaluators/: __init__.py  deepseek.py  manual.py  mock.py
aiops_bench/faults/: __init__.py  base.py  chaos_mesh.py  kubernetes.py  manager.py
aiops_bench/llm/: deepseek.py
aiops_bench/observability/: __init__.py  base.py  kubernetes.py  manager.py  render.py
aiops_bench/results/: __init__.py  writer.py
aiops_bench/scenario/: __init__.py  loader.py  schema.py
deploy/demo-app/: Dockerfile  README.md  k8s.yaml
deploy/demo-app/app/: go.mod  main.c  main.go  main.py
deploy/demo-app/chart/: Chart.yaml  values.yaml
deploy/demo-app/chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
doc/: agent_environment_setup.md  aiops_bench_k8s_runner_design.md  cli_mvp_guide.md  开发规范.md
scenarios/: T1_cpu_saturation.yaml  T2_memory_pressure.yaml  T3_network_delay.yaml  T4_network_loss.yaml  T5_pod_kill.yaml  T6_bad_config.yaml  T8_code_exception.yaml
skills/doc_review/: instructions.md
tests/: test_actions.py  test_cleanup.py  test_deepseek_config.py  test_fault_manager.py  test_faults.py  test_observability.py  test_runner.py  test_scenario.py
